@@ -1,0 +1,20 @@
+I am foo! 1
+I am foo! 2
+I am bar! 1
+I am bar! 2
+<far>
+I am foo! 3
+I am foo! 4
+</far>
+I am foo! 3
+I am foo! 4
+I am bar! 5
+I am bar! 6
+<far>
+I am foo! 7
+I am foo! 8
+</far>
+I am foo! 5
+I am foo! 6
+I am bar! 9
+I am bar! 10
