@@ -1,0 +1,8 @@
+<foo> my name is: foo default
+<foo> my name is: foo default
+<bar> my name is: bar default
+<bar> my name is: bar default
+<foo> my name is: ++ 1 ++ 
+<foo> my name is: foo default
+<bar> my name is: == y_bar! ==
+<bar> my name is: bar default
